create search bar

--- a/src/components/cartelera/cartelera.scss
+++ b/src/components/cartelera/cartelera.scss
@@ -11,4 +11,11 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+
+    &__title {
+        font-size: 1.125rem;
+        letter-spacing: .25px;
+        font-weight: 500;
+    }
+
 }
