--- a/src/components/cardCartelera/cardCartelera.scss
+++ b/src/components/cardCartelera/cardCartelera.scss
@@ -6,9 +6,24 @@
     border-radius: 6px;
     box-shadow: 0 0 10px rgba(0,0,0,.1);
     padding: 1rem 1.2rem;
+    gap: 0.5rem;
 
     &__image {
         border-radius: 5px;
         height: 450px;
+        width: 100%;
+    }
+
+    &__image:hover {
+        transform: scale(1.02);
+    }
+
+    &__title {
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+    &__span {
+        font-size: 13px;
     }
 }
