--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,9 +1,15 @@
 .header {
     background-color: black;
     display: flex;
-    width: 100%;
-    padding: 24px 24px;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 50px;
+
+    &__navbar {
+        display: flex;
+        width: 100%;
+        padding: 24px 24px;
+        justify-content: space-between;
+    }
 
     &__logo {
         width: 148px;
