--- a/src/components/cartelera/cartelera.scss
+++ b/src/components/cartelera/cartelera.scss
@@ -19,3 +19,16 @@
     }
 
 }
+
+@media (max-width:450px) { 
+    .cartelera {
+        width: 100%;
+        padding: 4rem 0.1rem;
+
+        &__title {
+            display: flex;
+            align-self: center;
+        }
+    }
+
+}
