--- a/src/components/detailsCard/detailsCard.scss
+++ b/src/components/detailsCard/detailsCard.scss
@@ -23,6 +23,12 @@
         font-size: 12px;
     }
 
+    &__info {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
     &__subtitle {
         font-size: 13px;
         font-weight: 700;
@@ -41,6 +47,32 @@
 
     &__video {
         padding-top: 1rem;
+    }
+
+    &__runtime {
+        font-size: 10px;
+        background-color: rgba(12, 11, 11, 0.864);
+        color: #fff;
+        width: 60px;
+        padding: 6px;
+        text-align: center;
+        border-radius: 5px;
+        margin-top: 10px;
+    }
+
+    &__genre {
+        font-size: 10px;
+        background-color: #1c508d;
+        color: #fff;
+        padding: 6px;
+        text-align: center;
+        border-radius: 5px;
+        margin-top: 10px;
+    }
+
+    &__buttons {
+        display: flex;
+        gap: 10px;
     }
 
 }
