--- a/src/components/hoursMovie/hoursMovie.scss
+++ b/src/components/hoursMovie/hoursMovie.scss
@@ -54,3 +54,12 @@
         opacity: 100;
     }
 }
+
+.hours__option.selected {
+    color: #fff;
+    background-color: rgba(12, 11, 11, 0.864);
+  }
+
+  .hours__button.visible {
+    opacity: 1; 
+  }
