--- a/src/components/summary/summary.scss
+++ b/src/components/summary/summary.scss
@@ -5,6 +5,10 @@
     border-radius: 10px;
     width: 38%;
 
+    &__image {
+        width: 70px;
+    }
+
     &__title {
         font-size: 18px;
         font-weight: 700;
@@ -14,11 +18,14 @@
         display: flex;
         flex-direction: column;
         font-size: 14px;
-        margin-top: 30px;
+
+
     }
 
     &__details {
         display: flex;
+        gap: 1rem;
+        margin-top: 30px;
     }
 
     &__total {
@@ -44,6 +51,13 @@
 
     &__subtitle {
         font-weight: 500;
+    }
+
+    &__paragraph {
+        display: flex;
+        flex-direction: column;
+        font-size: 14px;
+        margin-top: 30px;
     }
 
     }
