--- a/src/components/summary/summary.scss
+++ b/src/components/summary/summary.scss
@@ -17,9 +17,7 @@
     &__info {
         display: flex;
         flex-direction: column;
-        font-size: 14px;
-
-
+        font-size: 14px
     }
 
     &__details {
@@ -51,6 +49,7 @@
 
     &__subtitle {
         font-weight: 500;
+        margin-right: 5px;
     }
 
     &__paragraph {
