--- a/src/components/headerNav/headerNav.scss
+++ b/src/components/headerNav/headerNav.scss
@@ -1,3 +1,24 @@
+.header {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+
+    &__navbar {
+        background-color: black;
+        display: flex;
+        width: 100%;
+        padding: 24px 24px;
+        justify-content: space-between;
+    }
+
+    &__logo {
+        width: 148px;
+        cursor: pointer;
+    }
+
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -27,4 +48,20 @@
         box-shadow: 0 0 10px 0 rgba(0,0,0,.15);
         background-color: #0076ff;
     }
+}
+
+@media (max-width:450px) { 
+    .header {
+
+        &__navbar {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+        }
+
+        &__logo {
+            width: 120px;
+        }
+    }
+
 }
