--- a/src/components/selectHeader/selectHeader.scss
+++ b/src/components/selectHeader/selectHeader.scss
@@ -5,9 +5,10 @@
 
     &__select {
         width: 200px;
-        background-color: black;
+        background-color: #1c508d;
         border-radius: 5px;
-        border: 0.5px solid #fff;
+        border: none;
+        outline: none;
         color: #fff;
         font-size: .75rem;
         padding: 6px 12px;
