add styles to transaction

--- a/src/components/summary/summary.scss
+++ b/src/components/summary/summary.scss
@@ -35,7 +35,7 @@
 
     &__button {
         margin-top: 30px;
-        background-color: #1c508d;;
+        background-color: #1c508d;
         border: none;
         border-radius: 50px;
         color: #fff;
