--- a/src/components/selectHeader/selectHeader.scss
+++ b/src/components/selectHeader/selectHeader.scss
@@ -52,3 +52,49 @@ input::placeholder {
         }
     }
 }
+
+
+.loginFormOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+  }
+  
+  .loginFormContainer {
+    position: relative;
+    width: 300px;
+  }
+  
+  .loginForm {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .closeButton {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(242, 242, 242);
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: lighter;
+    cursor: pointer;
+  }
+  
+  .closeButton span {
+    font-size: 16px;
+  }
