--- a/src/components/selectHeader/selectHeader.scss
+++ b/src/components/selectHeader/selectHeader.scss
@@ -34,6 +34,103 @@
         color: #1c508d;
     }
 
+    &__loginFormOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 999;
+      }
+      
+      &__loginFormContainer {
+        position: relative;
+        width: 350px;
+      }
+      
+      &__loginForm {
+        background-color: #ffffff;
+        padding: 60px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      &__loginForm h1 {
+        font-size: 25px;
+        font-weight: 500;
+        align-self: center;
+      }
+
+      &__loginForm h2 {
+        font-size: 14px;
+        color: gray;
+        align-self: center;
+      } 
+      
+      &__form {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      &__labelform {
+        font-size: 12px;
+        font-weight: 500;
+      }
+
+      &__inputform {
+        border: none;
+        border-bottom: 1px solid gray; 
+        margin-bottom: 10px;
+        width: 100%;
+        outline: none;
+      }
+
+      &__closeButton {
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: rgb(242, 242, 242);
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: lighter;
+        cursor: pointer;
+      }
+      
+      &__closeButton span {
+        font-size: 16px;
+      }
+
+      &__login {
+        background-color: #1c508d;
+        color: #ffffff;
+        font-size: 14px;
+        width: 100%;
+        padding: 5px;
+        border-radius: 5px;
+      }
+
+      &__rememberMe {
+        display: flex;
+        gap: 3px;
+      }
+
+      &__checkbox {
+        border: #1c508d;
+      }
+
 }
 
 input::placeholder {
@@ -54,47 +151,3 @@ input::placeholder {
 }
 
 
-.loginFormOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 999;
-  }
-  
-  .loginFormContainer {
-    position: relative;
-    width: 300px;
-  }
-  
-  .loginForm {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  .closeButton {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: rgb(242, 242, 242);
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: lighter;
-    cursor: pointer;
-  }
-  
-  .closeButton span {
-    font-size: 16px;
-  }
