--- a/src/components/admin/admin.scss
+++ b/src/components/admin/admin.scss
@@ -28,10 +28,11 @@
         background-color: #1c508d;
         display: flex;
         flex-direction: column;
-        padding: 10px 15px;
+        padding: 12px 20px;
         border-radius: 5px;
-        line-height: 1rem;
+        line-height: 1.4rem;
         opacity: 0.7;
+        text-align: center;
     }
 
     &__date:hover {
@@ -39,7 +40,7 @@
     }
 
     &__day {
-        font-size: 22px;
+        font-size: 25px;
     }
 
     &__month {
@@ -64,9 +65,43 @@
     &__theater:hover {
         background-color:  rgba(128, 128, 128, 0.116);
     }
+
+    &__hours {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    &__hour {
+        display: flex;
+        border: 1px solid #1c508d;
+        border-radius: 20px;
+        padding: 2px 10px;
+        width: 15%;
+        color: #1c508d;
+        justify-content: center;
+        font-size: 14px;
+        gap: 5px;
+        margin-top: 5px;
+    }
+
+    &__sala {
+        display: flex;
+        gap: 5px;
+        margin-top: 5px;
+    }
 }
 
 .admin__date.selected-date {
     opacity: 1;
   }
 
+  .edit-icon {
+    color: rgb(232, 183, 7);
+    font-size: 20px;
+  }
+
+  .delete-icon {
+    color: red;
+    font-size: 20px;
+  }
