--- a/src/components/admin/admin.scss
+++ b/src/components/admin/admin.scss
@@ -59,7 +59,7 @@
 
     &__theater {
         border-bottom: 1px solid rgba(128, 128, 128, 0.671);
-        padding: 20px;
+        padding: 30px;
     }
 
     &__theater:hover {
@@ -68,15 +68,14 @@
 
     &__hours {
         display: flex;
-        flex-direction: column;
-        gap: 2rem;
+        gap: 10px;
     }
 
     &__hour {
         display: flex;
         border: 1px solid #1c508d;
         border-radius: 20px;
-        padding: 2px 10px;
+        padding: 5px 10px;
         width: 15%;
         color: #1c508d;
         justify-content: center;
@@ -85,11 +84,18 @@
         margin-top: 5px;
     }
 
+    &__salas {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding: 15px;
+    }
+
     &__sala {
         display: flex;
         gap: 5px;
-        margin-top: 5px;
     }
+
 }
 
 .admin__date.selected-date {
