add styles to transaction

--- a/src/components/transaction/transaction.scss
+++ b/src/components/transaction/transaction.scss
@@ -64,4 +64,10 @@
         font-size: 14px;
     }
 
+    &__summary {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+    }
+
 }
