--- a/src/components/download/download.scss
+++ b/src/components/download/download.scss
@@ -40,9 +40,11 @@
     }
 
     &__qr {
-        width: 40%;
+        padding: 20px 20px;
         display: flex;
         align-self: center;
+        justify-content: center;
+        background-color: white;
     }
 
 }
