--- a/src/components/selectHeader/selectHeader.scss
+++ b/src/components/selectHeader/selectHeader.scss
@@ -3,6 +3,11 @@
     gap: 1rem;
     align-items: center;
 
+    &__info {
+      display: flex;
+      gap: 2rem;
+    }
+
     &__select {
         width: 200px;
         background-color: #1c508d;
@@ -12,6 +17,22 @@
         color: #fff;
         font-size: .75rem;
         padding: 6px 12px;
+    }
+
+    &__city {
+      color: white;
+      font-size: 14px;
+    }
+
+    &__location {
+      width: 20px;
+      object-fit: contain;
+    }
+
+    &__loc {
+      display: flex;
+      align-items: center;
+      gap: 2px;
     }
 
 
