--- a/src/components/selectHeader/selectHeader.scss
+++ b/src/components/selectHeader/selectHeader.scss
@@ -114,6 +114,17 @@
         outline: none;
       }
 
+      &__loggedInUser {
+        color: white;
+        font-size: 14px;
+      }
+
+      &__view {
+        color: white;
+        font-size: 12px;
+        cursor: pointer;
+      }
+
       &__closeButton {
         position: absolute;
         top: -10px;
