--- a/src/components/admin/admin.scss
+++ b/src/components/admin/admin.scss
@@ -9,6 +9,7 @@
     &__img {
         width: 20%;
         border-radius: 5px;
+        margin-left: 5rem;
     }
 
     &__main {
@@ -22,6 +23,13 @@
         display: flex;
         flex-direction: column;
         gap: 2rem;
+        font-size: 14px;
+        color: gray;
+    }
+
+    &__subtitle {
+        color: black;
+        font-weight: 500;
     }
 
     &__cinemas {
@@ -64,9 +72,9 @@
         padding: 30px;
         display: flex;
         flex-direction: column;
-        gap: 2rem;
         border-radius: 5px;
         margin-top: 2rem;
+        font-weight: 500;
     }
 
     &__theater {
