--- a/src/components/admin/admin.scss
+++ b/src/components/admin/admin.scss
@@ -4,12 +4,18 @@
 
     &__video {
         background-color: black;
+        display: flex;
     }
 
     &__img {
         width: 20%;
         border-radius: 5px;
         margin-left: 5rem;
+    }
+
+    &__trailer {
+        width: 100%;
+        margin: 30px 30px;
     }
 
     &__main {
