--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -15,3 +15,23 @@
         gap: 2rem;
     }
 }
+
+@media (max-width:450px) { 
+
+    .detailsDiv {
+        display: flex;
+        flex-direction: column;
+        margin: 50px 15px 100px 15px;
+        gap: 1rem;
+
+        &__movie {
+            width: 100%;
+        }
+
+        &__hour {
+            width: 100%;
+        }
+    }
+
+
+}
