--- a/src/components/headerNav/headerNav.scss
+++ b/src/components/headerNav/headerNav.scss
@@ -1,269 +1,271 @@
 .header {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+
+  &__navbar {
     background-color: black;
     display: flex;
-    flex-direction: column;
-    gap: 50px;
+    width: 100%;
+    padding: 24px 24px;
+    justify-content: space-between;
+  }
 
-    &__navbar {
-        background-color: black;
-        display: flex;
-        width: 100%;
-        padding: 24px 24px;
-        justify-content: space-between;
-    }
-
-    &__logo {
-        width: 148px;
-        cursor: pointer;
-    }
+  &__logo {
+    width: 148px;
+    cursor: pointer;
+  }
 
 }
 
 .navbar {
+  display: flex;
+  justify-content: space-between;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: .5rem;
+
+  &__button {
+    align-items: center;
+    background-color: #1c508d;
+    padding: .65rem 1rem;
+    font-size: .75rem;
+    border: none;
+    color: #fff;
+    text-align: center;
+    font-weight: 400;
+    border-radius: 1.5em;
+    line-height: 1;
+    cursor: pointer;
     display: flex;
-    justify-content: space-between;
-    grid-template-columns: repeat(3,1fr);
-    grid-column-gap: .5rem;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+  }
 
-    &__button {
-        align-items: center;
-        background-color: #1c508d;
-        padding: .65rem 1rem;
-        font-size: .75rem;
-        border: none;
-        color: #fff;
-        text-align: center;
-        font-weight: 400;
-        border-radius: 1.5em;
-        line-height: 1;
-        cursor: pointer;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        -webkit-box-align: center;
-    }
-
-    &__button:hover {
-        box-shadow: 0 0 10px 0 rgba(0,0,0,.15);
-        background-color: #0076ff;
-    }
-}
-
-@media (max-width:450px) { 
-    .header {
-
-        &__navbar {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-        }
-
-        &__logo {
-            width: 120px;
-        }
-    }
-
+  &__button:hover {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
+    background-color: #0076ff;
+  }
 }
 
 
 .selectHeader {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  &__info {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
+  }
+
+  &__profileSection {
+    display: flex;
+    color: white;
     align-items: center;
+    gap: 5px;
+  }
 
-    &__info {
-      display: flex;
-      gap: 2rem;
-    }
+  &__profileName {
+    font-size: 14px;
+  }
 
-    &__profileSection {
-      display: flex;
-      color: white;
-      align-items: center;
-      gap: 5px;
-    }
+  &__profileButton {
+    font-size: 20px;
+    cursor: pointer;
+  }
 
-    &__profileName {
-      font-size: 14px;
-    }
+  &__select {
+    width: 200px;
+    background-color: #1c508d;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: .75rem;
+    padding: 6px 12px;
+  }
 
-    &__profileButton {
-      font-size: 20px;
-      cursor: pointer;
-    }
+  &__city {
+    color: white;
+    font-size: 14px;
+  }
 
-    &__select {
-        width: 200px;
-        background-color: #1c508d;
-        border-radius: 5px;
-        border: none;
-        outline: none;
-        color: #fff;
-        font-size: .75rem;
-        padding: 6px 12px;
-    }
+  &__location {
+    width: 20px;
+    object-fit: contain;
+  }
 
-    &__city {
-      color: white;
-      font-size: 14px;
-    }
-
-    &__location {
-      width: 20px;
-      object-fit: contain;
-    }
-
-    &__loc {
-      display: flex;
-      align-items: center;
-      gap: 2px;
-    }
+  &__loc {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+  }
 
 
-    &__icon {
-        width: 25px;
-        height: 25px;
-        background-color: #1c508d;
-        object-fit: contain;
-        border-radius: 50%;
-        cursor: pointer;
-        padding: 5px;
-    }
+  &__icon {
+    width: 25px;
+    height: 25px;
+    background-color: #1c508d;
+    object-fit: contain;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 5px;
+  }
 
-    &__input {
-        border-radius: 1.5rem;
-        background-color: #dbe2f1;
-        outline: none;
-        font-size: .75rem;
-        padding: 6px 12px;
-        color: #1c508d;
-    }
+  &__input {
+    border-radius: 1.5rem;
+    background-color: #dbe2f1;
+    outline: none;
+    font-size: .75rem;
+    padding: 6px 12px;
+    color: #1c508d;
+  }
 
-    &__loginFormOverlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 999;
-      }
-      
-      &__loginFormContainer {
-        position: relative;
-        width: 350px;
-      }
-      
-      &__loginForm {
-        background-color: #ffffff;
-        padding: 60px;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-      }
+  &__loginFormOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+  }
 
-      &__loginForm h1 {
-        font-size: 25px;
-        font-weight: 500;
-        align-self: center;
-      }
+  &__loginFormContainer {
+    position: relative;
+    width: 350px;
+  }
 
-      &__loginForm h2 {
-        font-size: 14px;
-        color: gray;
-        align-self: center;
-      } 
-      
-      &__form {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-      }
+  &__loginForm {
+    background-color: #ffffff;
+    padding: 60px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-      &__labelform {
-        font-size: 12px;
-        font-weight: 500;
-      }
+  &__loginForm h1 {
+    font-size: 25px;
+    font-weight: 500;
+    align-self: center;
+  }
 
-      &__inputform {
-        border: none;
-        border-bottom: 1px solid gray; 
-        margin-bottom: 10px;
-        width: 100%;
-        outline: none;
-      }
+  &__loginForm h2 {
+    font-size: 14px;
+    color: gray;
+    align-self: center;
+  }
 
-      &__loggedInUser {
-        color: white;
-        font-size: 14px;
-      }
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-      &__view {
-        color: white;
-        font-size: 12px;
-        cursor: pointer;
-      }
+  &__labelform {
+    font-size: 12px;
+    font-weight: 500;
+  }
 
-      &__closeButton {
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        background-color: rgb(242, 242, 242);
-        border: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight: lighter;
-        cursor: pointer;
-      }
-      
-      &__closeButton span {
-        font-size: 16px;
-      }
+  &__inputform {
+    border: none;
+    border-bottom: 1px solid gray;
+    margin-bottom: 10px;
+    width: 100%;
+    outline: none;
+  }
 
-      &__login {
-        background-color: #1c508d;
-        color: #ffffff;
-        font-size: 14px;
-        width: 100%;
-        padding: 5px;
-        border-radius: 5px;
-      }
+  &__loggedInUser {
+    color: white;
+    font-size: 14px;
+  }
 
-      &__rememberMe {
-        display: flex;
-        gap: 3px;
-      }
+  &__view {
+    color: white;
+    font-size: 12px;
+    cursor: pointer;
+  }
 
-      &__checkbox {
-        border: #1c508d;
-      }
+  &__closeButton {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(242, 242, 242);
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: lighter;
+    cursor: pointer;
+  }
+
+  &__closeButton span {
+    font-size: 16px;
+  }
+
+  &__login {
+    background-color: #1c508d;
+    color: #ffffff;
+    font-size: 14px;
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+  }
+
+  &__rememberMe {
+    display: flex;
+    gap: 3px;
+  }
+
+  &__checkbox {
+    border: #1c508d;
+  }
 
 }
 
 input::placeholder {
-    color: #1c508d;
+  color: #1c508d;
 }
 
-@media (max-width:450px) { 
-    .selectHeader {
+@media (max-width:450px) {
+  .selectHeader {
 
-        &__select {
-            width: 120px;
-        }
-
-        &__input {
-            width: 100px
-        }
+    &__select {
+      width: 120px;
     }
-}
 
+    &__input {
+      width: 100px
+    }
+  }
+
+  .header {
+
+    &__navbar {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+    }
+
+    &__logo {
+      width: 120px;
+    }
+  }
+
+  .navbar__button {
+    display: none;
+  }
+  
+}
