--- a/src/components/payment/payment.scss
+++ b/src/components/payment/payment.scss
@@ -78,3 +78,19 @@
         background-position: 90%;
     }
 }
+
+@media (max-width:450px) { 
+    .payment {
+        display: flex;
+        flex-direction: column;
+        margin: 50px 15px 50px 15px;
+    }
+    .payment__pay {
+        width: 100%;
+    }
+
+    .payment__summary {
+        width: 100%;
+    }
+
+}
