--- a/src/components/payment/payment.scss
+++ b/src/components/payment/payment.scss
@@ -77,6 +77,18 @@
         background-size: 12px;
         background-position: 90%;
     }
+
+    &__button {
+        background-color: #1c508d;
+        border: none;
+        border-radius: 50px;
+        color: #fff;
+        font-size: 12px;
+        padding: 10px 5px;
+        width: 50%;
+        cursor: pointer;
+        align-self: center;
+    }
 }
 
 @media (max-width:450px) { 
@@ -92,5 +104,7 @@
     .payment__summary {
         width: 100%;
     }
+
+    
 
 }
